--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hexo-algolia": "^1.2.3",
     "hexo-autonofollow": "^1.0.1",
     "hexo-deployer-git": "^0.3.1",
+    "hexo-deployer-rsync": "^0.1.3",
     "hexo-filter-auto-spacing": "^0.2.1",
     "hexo-filter-cleanup": "^1.0.7",
     "hexo-generator-archive": "^0.1.5",
