Add friend link

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -646,6 +646,7 @@ links:
   Blessing Studio: https://blessing.studio/
   咚门: http://www.dearzd.com
   南浦月: https://blog.nanpuyue.com/
+  ddddxxx's Blog: https://ddddxxx.github.io/
 
 # Theme version
 version: 5.1.1
