--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
   "private": true,
   "hexo": {
-    "version": "3.4.3"
+    "version": "3.7.1"
   },
   "scripts": {
-    "preview": "hexo s --open --config _config.preview.yml --silent"
+    "preview": "hexo server -o --config _config.preview.yml -l"
   },
   "dependencies": {
-    "hexo": "^3.4.3",
+    "hexo": "^3.7.1",
     "hexo-admin": "^2.3.0",
-    "hexo-algolia": "^1.2.3",
+    "hexo-algolia": "^1.2.5",
     "hexo-autonofollow": "^1.0.1",
+    "hexo-browsersync": "^0.3.0",
     "hexo-deployer-git": "^0.3.1",
-    "hexo-deployer-rsync": "^0.1.3",
     "hexo-filter-auto-spacing": "^0.2.1",
-    "hexo-filter-cleanup": "^1.0.7",
+    "hexo-filter-cleanup": "^1.1.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
@@ -24,10 +24,10 @@
     "hexo-generator-seo-friendly-sitemap": "0.0.21",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.2",
-    "hexo-tag-aplayer": "^2.0.7",
+    "hexo-server": "^0.3.2",
+    "hexo-tag-aplayer": "^3.0.3",
     "hexo-wordcount": "^3.0.2"
   }
 }
