--- a/_config.preview.yml
+++ b/_config.preview.yml
@@ -36,7 +36,7 @@ default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 1
-render_drafts: false
+render_drafts: true
 post_asset_folder: false
 relative_link: false
 future: true
