Add friend link

--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -23,6 +23,11 @@ ddddxxx:
   avatar: https://cat.yufan.me/asserts/spectre/images/links/ddddxxx.jpg
   descr: "So, what are you looking for?"
 
+RUO DOJO:
+  link: https://blog.jamespan.me/
+  avatar: https://cat.yufan.me/asserts/spectre/images/links/jamespan.jpg
+  descr: "自称潘小鶸，实为Java菊苣"
+
 行者自若:
   link: https://alexinea.com/
   avatar: https://cat.yufan.me/asserts/spectre/images/links/alexinea.png
