Add scienjus' link

--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -28,6 +28,11 @@ RUO DOJO:
   avatar: https://cat.yufan.me/asserts/spectre/images/links/jamespan.jpg
   descr: "自称潘小鶸，实为Java菊苣"
 
+ScienJus:
+  link: http://www.scienjus.com/
+  avatar: https://cat.yufan.me/asserts/spectre/images/links/scienjus.jpg
+  descr: "二次元同好，编程菊苣"
+
 行者自若:
   link: https://alexinea.com/
   avatar: https://cat.yufan.me/asserts/spectre/images/links/alexinea.png
