Add new friend link

--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -97,3 +97,8 @@ Minagi:
   link: https://dearroy.com/
   avatar: https://cat.yufan.me/asserts/spectre/images/links/dearroy.jpg
   descr: "曾经喜欢他的文字"
+
+贾顺名:
+  link: https://blog.jiasm.org/
+  avatar: https://cat.yufan.me/asserts/spectre/images/links/jiasm.jpg
+  descr: "前端大佬"
